<resources>
    <string name="app_name">WTViewer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_sort">Sort By…</string>
    <string name="action_sort_fifo">FIFO</string>
    <string name="action_sort_alphabet">Alphabet</string>
    <string name="action_sort_release">Release Day</string>

    <string name="action_show_hidden">Show Hidden</string>
    <string name="action_hide_hidden">Hide Hidden</string>
    <string name="action_set_hide">Set Hidden</string>
    <string name="action_set_show">Set Shown</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="title_main">Main List</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_viewer">Viewer</string>
    <string name="title_settings">Settings</string>

    <string name="fab_label_web">Load by Web</string>
    <string name="fab_label_list">Load by list of links</string>
    <string name="fab_label_link">Load by single link</string>

    <string name="shared_pref_key">sharedpreffragmain</string>
    <string name="shared_pref_entry_key">entrypoint</string>
    <string name="shared_pref_sort_type_key">sorttype</string>
    <string name="shared_pref_sort_direction_key">sortdirection</string>

    <string name="day_sun_short">SUN</string>
    <string name="day_mon_short">MON</string>
    <string name="day_tue_short">TUE</string>
    <string name="day_wed_short">WED</string>
    <string name="day_thu_short">THU</string>
    <string name="day_fri_short">FRI</string>
    <string name="day_sat_short">SAT</string>

    <string name="hint_title">Title</string>
    <string name="hint_toonid">Toon ID</string>
    <string name="hint_epiid">Episode ID</string>
    <string name="hint_toontype">Toon Type</string>
    <string name="hint_url">Url</string>
    <string name="hint_url_list">List of Urls</string>

    <string name="item_placeholder">New Item #%d</string>
    <string name="sample">Sample</string>

    <string name="btn_add_this_page">Add This Page</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_backup">Backup</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_cleanup">Clean Up</string>
    <string name="btn_cancel">Cancel</string>

    <string name="txt_url">Please type in a link of your desired toon.</string>
    <string name="txt_url_entry">Please type in a link of currently working link acquirer.</string>
    <string name="txt_url_entry_2">(Default is https://nicelink6.com/)</string>
    <string name="txt_url_list">Please type in a list of links of your desired toons.</string>
    <string name="txt_url_list_2">Each link should be separated with a linebreak.</string>

    <string name="content_desc_fab_options">It shows extra mini-FABs which does specific add-job.</string>
    <string name="content_desc_fab_web">It moves you to the page where you can add a toon by navigating yourself into that specific toon web page.</string>
    <string name="content_desc_fab_list">It moves you to the page where you can add a list of toons by giving long text consisted with links divided by link breaks.</string>
    <string name="content_desc_fab_link">It moves you to the page where you can add a toon by giving a url of that specific toon web page.</string>
    <string name="content_desc_fab_confirm">By doing this, the things you reviewed above will be added to the main list.</string>
    <string name="content_desc_thumbnail">It is a thumbnail of this toon.</string>
    <string name="content_desc_toon_slide">It is a placeholder of the toon slide. It will be filled with the actual toon slides.</string>

    <string name="notif_invalid_link_in_list">Invalid url was in the list. Stopping iteration.</string>
    <string name="notif_link_not_ready">Main entry point is not yet prepared. Please wait shortly.</string>
    <string name="notif_invalid_link_typed">Given url is invalid. Please try with another.</string>
    <string name="notif_empty_link_typed">No url has been given.</string>
    <string name="notif_empty_name_typed">No name has been given.</string>
    <string name="notif_is_not_webtoon">Sorry, we are having difficulty to load non-webtoon contents to our viewer.</string>
    <string name="notif_valid_entry_root">Received a valid link acquirer. App will be using this link for latter loading.</string>
    <string name="notif_invalid_entry_root">Received an invalid link acquirer. Setting it back to default.</string>
    <string name="notif_backup">DB is successfully dumped.</string>
    <string name="notif_restore">DB is successfully restored. All contents are added at the tail of the original list.</string>

    <string name="warning_cleanup_1">By doing this your entire data of this app will be wiped.</string>
    <string name="warning_cleanup_2">Are you sure to do this?</string>
</resources>