<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.FragmentSettings" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_setting_header_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_url_entry" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_url_entry_2" />

            <EditText
                android:id="@+id/etxt_setting_entry_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_url"
                android:inputType="textUri"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btn_setting_url_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_apply" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/btn_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_backup" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/btn_restore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_restore" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>