<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.WTViewerFinalPls.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.WTViewerFinalPls.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/content_main"
        layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/content_desc_fab_options"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_mini_margin_end"
        android:layout_marginBottom="@dimen/fab_mini_margin_bottom_1"
        android:clickable="true"
        android:visibility="gone"
        android:contentDescription="@string/fab_label_list"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_baseline_list_alt_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_mini_margin_end"
        android:layout_marginBottom="@dimen/fab_mini_margin_bottom_2"
        android:clickable="true"
        android:visibility="gone"
        android:contentDescription="@string/fab_label_link"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_baseline_add_link_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_mini_margin_end"
        android:layout_marginBottom="@dimen/fab_mini_margin_bottom_3"
        android:clickable="true"
        android:visibility="gone"
        android:contentDescription="@string/fab_label_web"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_baseline_web_24" />

    <Button
        android:id="@+id/btn_fablabel_web"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_mini_label_margin_end"
        android:layout_marginBottom="@dimen/fab_mini_margin_bottom_3"
        android:elevation="6dp"
        android:text="@string/fab_label_web"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_fablabel_link"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_mini_label_margin_end"
        android:layout_marginBottom="@dimen/fab_mini_margin_bottom_2"
        android:elevation="6dp"
        android:text="@string/fab_label_link"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_fablabel_list"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_mini_label_margin_end"
        android:layout_marginBottom="@dimen/fab_mini_margin_bottom_1"
        android:elevation="6dp"
        android:text="@string/fab_label_list"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>